--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"ftp-srv": "^4.6.2",
+		"memfs": "^3.4.7",
 		"mongoose": "^6.4.3",
 		"node-fetch": "^2.6.7",
 		"socket.io": "^4.5.1",
 		"ts-node": "^10.8.2",
 		"typescript": "^4.7.4",
+		"uuid": "^9.0.0",
 		"ws": "^8.8.0"
 	},
 	"devDependencies": {
