--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@typegoose/auto-increment": "^1.8.0",
 		"@typegoose/typegoose": "^9.10.1",
 		"ansi-colors": "^4.1.3",
 		"cookie-parser": "^1.4.6",
